# Hairly

./: README.md  pyproject.toml
backend/data/: products.json
